fixed section bug where it would mesh on smaller screens

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -109,13 +109,13 @@ body {
 /* Section Styles */
 .section {
   padding: 4rem 0;
-  height: 50vh;
+  /* height: 50vh; */
 }
 
 .section-gray {
   background-color: #f9f9f9;
   padding: 4rem 0;
-  height: 50vh;
+  /* height: 50vh; */
 }
 
 .section-title {
